@@ -12,6 +12,7 @@ not an invitation to misrepresent who contributed to GNU GParted.
 We need to keep track of copyright (see the Maintainer HOWTO on www.gnu.org).
 
 Curtis Gedak		<gedakc@users.sourceforge.net>
+	* Wrote Utils::cleanup_cursor() function
 	* Rewrote get_label functionality for hfs
 	* Wrote create, get_label, and check_repair functionality for hfs+
 	* Wrote get_label functionality for fat16 and fat32 filesystems  
