@@ -1,3 +1,12 @@
+2008-09-04  Curtis Gedak  <gedakc@gmail.com>
+
+	* include/Utils.h,
+	  src/Utils.cc: Fixed display problem with percent complete messages.
+	  - Some commands use cursor repositioning to display progress.
+	    This cursoring does not display well within the tracking of
+	    gparted details.  A newly added function will cleanup the output.
+	  - Closes GParted bug #532574
+
 2008-09-01  Curtis Gedak  <gedakc@gmail.com>
 
 	* COPYING-DOCS: Added new file containing GFDL 1.2 license
